--- a/css/style.css
+++ b/css/style.css
@@ -28,18 +28,14 @@ header {
 }
 
 main {
-    max-width: 1680px;
-    max-height: 1080px;
-    height: 1080px;
     width: 1680px;
+    height: 1080px;
     margin: 0 auto;
     background-image: url("https://i.imgur.com/cUeG1tS.png");
     background-repeat: no-repeat;
 }
 
 .container {
-    width: 100%;
-    height: 100%;
     bottom: 0em;
     margin: -1em;
 }
@@ -103,4 +99,18 @@ div {
     top: 1em;
     position: relative;
     right: 3em;
+}
+a:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 100%;
+  border-bottom: 2px solid #555; 
+  transition: all 0.5s;
+}
+
+a:hover:before {
+  width: 70%;
 }
