--- a/css/style.css
+++ b/css/style.css
@@ -28,16 +28,16 @@ header {
 }
 
 main {
-    width: 1680px;
+    width: 1920px;
     height: 1080px;
     margin: 0 auto;
-    background-image: url("https://i.imgur.com/cUeG1tS.png");
+    background-image: url("https://i.imgur.com/KYd3Ezu.png");
     background-repeat: no-repeat;
 }
 
 .container {
-    bottom: 0em;
-    margin: -1em;
+    height:67.5 em;
+    width: 100%;
 }
 
 footer {
@@ -100,17 +100,16 @@ div {
     position: relative;
     right: 3em;
 }
-a:before {
+.topik_menu a:before {
   content: '';
   position: absolute;
   left: 0;
-  top: 0;
   width: 0;
   height: 100%;
-  border-bottom: 2px solid #555; 
+  border-bottom: 2px solid #404040; 
   transition: all 0.5s;
 }
 
-a:hover:before {
+.topik_menu a:hover:before {
   width: 70%;
 }
