--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,12 @@ div {
   width: 70%;
 }
 
+@media  screen and (max-width: 1100px) {
+    .logo_black {
+        width: 8em;
+        height: 3em;
+    }
+    .topik_menu {
+        font-size: 0.8em;;
+    } 
+}
