--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,6 @@ header {
 
 .logo_black {
     position: relative;
-    top: 1em;
-    left: 1em;
     width: 11em;
     height: 4em;
 }
@@ -79,7 +77,11 @@ ion-icon{
     font-family: 'El Messiri', sans-serif;
 }
 
-
+.logoLink{
+    position:absolute;
+    top: 1em;
+    left: 1em;
+}
 
 main {
     width: 100%;
@@ -105,7 +107,7 @@ footer {
     /*таким чудом я розмістив div'и в футері по горизонталі*/
 }
 
-div {
+footer div {
     width: 100%;
     margin-right: 10px;
     text-align: center;
