--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
 header {
+    display: flex;
+
     width: 100%;
     height: 6.6em;
     background-color: #FFC700;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .logo_black {
@@ -78,7 +84,7 @@ ion-icon{
 }
 
 .logoLink{
-    position:absolute;
+    position:relative;
     top: 1em;
     left: 1em;
 }
