--- a/history_Rivne/css/style.css
+++ b/history_Rivne/css/style.css
@@ -1,13 +1,17 @@
 header {
+    display: flex;
+
     width: 100%;
     height: 6.6em;
     background-color: #FFC700;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .logo_black {
     position: relative;
-    top: 1em;
-    left: 1em;
     width: 11em;
     height: 4em;
 }
@@ -21,7 +25,7 @@ header {
 }
 nav{
     position: relative;
-    top: -44%;
+    top: 20%;
     right: 5%;
     display: flex;
     justify-content: flex-end;
@@ -79,7 +83,11 @@ ion-icon{
     font-family: 'El Messiri', sans-serif;
 }
 
-
+.logoLink{
+    position:relative;
+    top: 1em;
+    left: 1em;
+}
 
 main {
     width: 100%;
@@ -105,7 +113,7 @@ footer {
     /*таким чудом я розмістив div'и в футері по горизонталі*/
 }
 
-div {
+footer div {
     width: 100%;
     margin-right: 10px;
     text-align: center;
@@ -168,20 +176,3 @@ div {
   width: 70%;
 }
 
-
-.active-page a:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    border-bottom: 2px solid #404040; 
-    transition: all 0.5s;
-  }
-
-.active-page {
-    position: relative;
-    padding-right: 2em;
-    font-size: 1.2em;
-    font-family: 'El Messiri', sans-serif;
-}
