--- a/history_Rivne/css/style.css
+++ b/history_Rivne/css/style.css
@@ -1,7 +1,5 @@
-
 header {
     display: flex;
-
     width: 100%;
     height: 6.6em;
     background-color: #FFC700;
@@ -9,12 +7,6 @@ header {
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: flex-start;
-}
-
-.logo_black {
-    position: relative;
-    width: 11em;
-    height: 4em;
 }
 
 .menu {
@@ -77,7 +69,7 @@ ion-icon{
     cursor: pointer;
 }
 
-.topik_menu {
+.topik_menu, .active-page{
     position: relative;
     padding-right: 2em;
     font-size: 1.2em;
@@ -88,13 +80,15 @@ ion-icon{
     position:relative;
     top: 1em;
     left: 1em;
+    width: 11em;
+    height: 4em;
 }
 
 main {
     width: 100%;
     height: 1080px;
     margin: 0 auto;
-    background-image: url("https://i.imgur.com/KYd3Ezu.png");
+    /*background-image: url("https://i.imgur.com/KYd3Ezu.png");*/
     background-repeat: no-repeat;
 }
 
@@ -175,10 +169,4 @@ footer div {
 
 .topik_menu a:hover:before {
   width: 70%;
-}
-.active-page{
-    font-family: 'El Messiri', sans-serif;
-    position: relative;
-    padding-right: 2em;
-    font-size: 1.2em;  
 }
