--- a/nowadays_Rivne/css/style.css
+++ b/nowadays_Rivne/css/style.css
@@ -10,12 +10,6 @@ header {
     align-items: flex-start;
 }
 
-.logo_black {
-    position: relative;
-    width: 11em;
-    height: 4em;
-}
-
 .menu {
     position: relative;
     float: right;
@@ -76,7 +70,7 @@ ion-icon{
     cursor: pointer;
 }
 
-.topik_menu {
+.topik_menu, .active-page {
     position: relative;
     padding-right: 2em;
     font-size: 1.2em;
@@ -87,13 +81,16 @@ ion-icon{
     position:relative;
     top: 1em;
     left: 1em;
+    position: relative;
+    width: 11em;
+    height: 4em;
 }
 
 main {
     width: 100%;
     height: 1080px;
     margin: 0 auto;
-    background-image: url("https://i.imgur.com/KYd3Ezu.png");
+    /*background-image: url("https://i.imgur.com/KYd3Ezu.png");*/
     background-repeat: no-repeat;
 }
 
