--- a/tourist_Rivne/css/style.css
+++ b/tourist_Rivne/css/style.css
@@ -1,6 +1,5 @@
 header {
     display: flex;
-
     width: 100%;
     height: 6.6em;
     background-color: #FFC700;
@@ -76,7 +75,7 @@ ion-icon{
     cursor: pointer;
 }
 
-.topik_menu {
+.topik_menu, .active-page{
     position: relative;
     padding-right: 2em;
     font-size: 1.2em;
@@ -87,13 +86,15 @@ ion-icon{
     position:relative;
     top: 1em;
     left: 1em;
+    width: 11em;
+    height: 4em;
 }
 
 main {
     width: 100%;
     height: 1080px;
     margin: 0 auto;
-    background-image: url("https://i.imgur.com/KYd3Ezu.png");
+    /*background-image: url("https://i.imgur.com/KYd3Ezu.png");*/
     background-repeat: no-repeat;
 }
 
@@ -175,4 +176,3 @@ footer div {
 .topik_menu a:hover:before {
   width: 70%;
 }
-
