--- a/tourist_Rivne/css/new-style.css
+++ b/tourist_Rivne/css/new-style.css
@@ -1,23 +1,32 @@
 /* Тараканівський форт*/
+.container{
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4em;
+    width: 65%;
+    margin-left: 20em;
+}
+
 .fort-block{
 	display: inline-flex;
-	align-content: center;
+    align-content: center;
 }
 
 .fort{
-	height: 25em;
-	width: 20em;
-	margin-top: 10em;
-	margin-left: 10em;
-	border-radius: 20px;
+	height: 40em;
+    width: 36em;
+    /* margin-top: 3em; */
+    /* margin-left: 10em; */
+    border-radius: 20px;
 
 }
 .fort-text{
 	font-size: 2em;
-	font-family: 'Montserrat', bold;
-	color: black;
-	margin-top: 8.5em;
-	margin-left: 7em;
+    font-family: 'Montserrat', bold;
+    color: black;
+    margin-top: 1.5em;
+    margin-left: 8em;
 }
 
 /* Тунель кохання */
