--- a/history_Rivne/css/style.css
+++ b/history_Rivne/css/style.css
@@ -86,7 +86,7 @@ ion-icon{
 
 main {
     width: 100%;
-    height: 1080px;
+    min-height: 1080px;
     margin: 0 auto;
     /*background-image: url("https://i.imgur.com/KYd3Ezu.png");*/
     background-repeat: no-repeat;
