--- a/tourist_Rivne/css/style.css
+++ b/tourist_Rivne/css/style.css
@@ -91,6 +91,7 @@ ion-icon{
 }
 main {
     width: 100%;
+    min-height: 1080px;
     margin: 0 auto;
     background: white;
     /*background-image: url("https://i.imgur.com/KYd3Ezu.png");*/
