--- a/history_Rivne/css/style.css
+++ b/history_Rivne/css/style.css
@@ -21,7 +21,7 @@ nav{
     top: 20%;
     right: 5%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex;
     flex-direction: row;
     align-items: center;
 }
@@ -69,7 +69,7 @@ ion-icon{
     cursor: pointer;
 }
 
-.topik_menu, .active-page{
+.topik_menu{
     position: relative;
     padding-right: 2em;
     font-size: 1.2em;
