--- a/tourist_Rivne/css/new-style.css
+++ b/tourist_Rivne/css/new-style.css
@@ -1,12 +1,38 @@
 /* Тараканівський форт*/
 .container{
 	display: flex;
-	margin: 4em auto;
+	margin: 0em auto;
     width: 70%;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    background: rgba(223, 223, 223, 20%);
 }
 
+.add-info{
+	font-size: 1.5em;
+    font-family: 'Montserrat', bold;
+    color: black;
+    margin: 0.7em;
+    /* margin-right: 2em; */
+    align-items: center;
+    width: 73%;
+}
+
+.info-block{
+	display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+
+}
+.tittle{
+    font-size: 2em;
+    font-family: 'Montserrat', bold;
+    color: black;
+    margin: 1em auto;
+    /* margin-right: 2em; */
+    align-items: center;
+}
 
 
 .fort-block{
@@ -14,6 +40,7 @@
     width: 90%;
     align-content: center;
     justify-content: space-between;
+    margin-top: 4em;
 }
 
 .fort{
@@ -25,31 +52,6 @@
 
 }
 
-.info-tarFort-block{
-	display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-
-}
-
-.fort-text{
-	font-size: 2em;
-    font-family: 'Montserrat', bold;
-    color: black;
-    margin: 1.5em auto;
-    /* margin-right: 2em; */
-    align-items: center;
-}
-.add-info-tarFort{
-	font-size: 1.5em;
-    font-family: 'Montserrat', bold;
-    color: black;
-    margin: 0.7em;
-    /* margin-right: 2em; */
-    align-items: center;
-    width: 73%;
-}
 
 
 
@@ -68,12 +70,6 @@
     border-radius: 20px;
 
 }
-.zal-text{
-	font-size: 2em;
-    font-family: 'Montserrat', bold;
-    color: black;
-    margin: 1.5em auto;
-}
 
 
 
@@ -83,6 +79,7 @@
     width: 90%;
     justify-content: center;
     margin-top: 10em;
+    margin-bottom: 4em;
 }
 
 .bunker{
@@ -92,10 +89,4 @@
     /* margin-left: 10em; */
     border-radius: 20px;
 
-}
-.bunker-text{
-	font-size: 2em;
-	font-family: 'Montserrat', bold;
-	color: black;
-	margin: 1.5em auto;
 }
