--- a/tourist_Rivne/css/new-style.css
+++ b/tourist_Rivne/css/new-style.css
@@ -1,48 +1,15 @@
 /* Тараканівський форт*/
 .container{
-	display: flex;
-	margin: 4em auto;
+  display: flex;
+  margin: 0em auto;
     width: 70%;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    background: rgba(223, 223, 223, 70%);
 }
 
-
-
-.fort-block{
-	display: flex;
-    width: 90%;
-    align-content: center;
-    justify-content: space-between;
-}
-
-.fort{
-	height: 40em;
-    width: 36em;
-    /* margin-top: 3em; */
-    /* margin-left: 10em; */
-    border-radius: 20px;
-
-}
-
-.info-tarFort-block{
-	display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-
-}
-
-.fort-text{
-	font-size: 2em;
-    font-family: 'Montserrat', bold;
-    color: black;
-    margin: 1.5em auto;
-    /* margin-right: 2em; */
-    align-items: center;
-}
-.add-info-tarFort{
-	font-size: 1.5em;
+.add-info{
+    font-size: 1.5em;
     font-family: 'Montserrat', bold;
     color: black;
     margin: 0.7em;
@@ -51,51 +18,74 @@
     width: 73%;
 }
 
-
-
-/* Органний Зал */
-.zal-block{
-	display: flex;
-    width: 90%;
-    justify-content: center;
-    margin-top: 10em;
-}
-
-.zal{
-	height: 40em;
-    width: 36em;
-    /* margin-left: 4em; */
-    border-radius: 20px;
+.info-block{
+  display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
 
 }
-.zal-text{
-	font-size: 2em;
+.tittle{
+    font-size: 2em;
     font-family: 'Montserrat', bold;
     color: black;
-    margin: 1.5em auto;
+    margin: 1em auto;
+    /* margin-right: 2em; */
+    align-items: center;
 }
 
 
-
-/* Бункер Еріка Коха */
-.bunker-block{
-	display: flex;
+.fort-block{
+  display: flex;
     width: 90%;
-    justify-content: center;
-    margin-top: 10em;
+    align-content: center;
+    justify-content: space-between;
+    margin-top: 4em;
 }
 
-.bunker{
-	height: 40em;
+.fort{
+  height: 40em;
     width: 36em;
     /* margin-top: 3em; */
     /* margin-left: 10em; */
     border-radius: 20px;
 
 }
-.bunker-text{
-	font-size: 2em;
-	font-family: 'Montserrat', bold;
-	color: black;
-	margin: 1.5em auto;
+
+
+
+/* Органний Зал */
+.zal-block{
+  display: flex;
+    width: 90%;
+    justify-content: center;
+    margin-top: 10em;
+}
+
+.zal{
+  height: 40em;
+    width: 36em;
+    /* margin-left: 4em; */
+    border-radius: 20px;
+
+}
+
+
+
+/* Бункер Еріка Коха */
+.bunker-block{
+  display: flex;
+    width: 90%;
+    justify-content: center;
+    margin-top: 10em;
+    margin-bottom: 4em;
+}
+
+.bunker{
+  height: 40em;
+    width: 36em;
+    /* margin-top: 3em; */
+    /* margin-left: 10em; */
+    border-radius: 20px;
+
 }
