--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ main {
     min-height: 1080px;
     margin: 0 auto;
     background-image: url("https://i.imgur.com/KYd3Ezu.png");
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -122,8 +123,9 @@ footer div {
 }
 
 .sponsor_img {
-    width: 6.5em;
-    height: 6.5em;
+    margin-top: -1.5em;
+    width: 4.8em;
+    height: 4.8em;
 }
 
 .sibir_menu,
