--- a/tourist_Rivne/css/media.css
+++ b/tourist_Rivne/css/media.css
@@ -1,22 +1,34 @@
 @media screen and (min-width:  1366px) and (max-width:  1919px){
-	.logoLink{
+		.logoLink{
     	position:relative;
     	top: 0.65em;
     	left: 0.65em;
     	width: 8em;
     	height: 3em;
 	}
+	nav{
+		top: 12%;
+	}
 
 	.topik_menu, .active-page{
     	font-size: 0.9em;
 	}
 	header {
-    	height: 4.4em;
+    	height: 4.7em;
 	}
 	.searchBox{
     	width: 42.5px;
     	height: 30px;
     	right: 9%;
+	}
+	ion-icon{
+		right: 20%;
+	}
+	.searchBox input{
+		padding: 5px 20px;
+	}
+	.searchBox:hover{
+    	width: 300px;
 	}
 	footer {
     	height: 6em;
@@ -29,7 +41,7 @@
     }
 
 	.sponsor_img {
-		margin-top: -1.5em;
+		margin-top: -1.3em;
     	width: 3.7em;
     	height: 3.7em;
     }
@@ -40,18 +52,21 @@
     	font-size: 0.7em;
     	color: rgb(255, 255, 255);
     }
+    .adv{
+    	margin-right: 5em;
+    }
     .sponsor{
-    	margin-top: 1.5em;
+    	margin-top: 1.1em;
     }
     
     .sibir {
     	margin-left: -5em;
-    	margin-top: -1em;
+    	margin-top: -1.2em;
 	}
 	
 	.about_us {
 		margin-left: -5em;
-    	margin-top: -1em;
+    	margin-top: -1.2em;
 	}
 	.fort, .zal, .bunker{
 		height: 30em;
