--- a/tourist_Rivne/css/new-style.css
+++ b/tourist_Rivne/css/new-style.css
@@ -19,12 +19,12 @@
     width: 73%;
 }
 
-.fort-info, .fort-title{
+.fort-info, .zal-info, .bunker-info, .fort-title, .zal-title, .bunker-title{
   opacity: 0;
   transform: translateY(-200px);
   transition: all 1.5s;
 }
-.fort-info.-active, .fort-title.-active{
+.fort-info.-active,  .zal-info.-active, .bunker-info.-active, .fort-title.-active, .zal-title.-active, .bunker-title.-active{
   opacity: 1;
   transform: translateY(0px);
 }
@@ -54,7 +54,7 @@
     margin-top: 4em;
 }
 
-.fort{
+.fort, .zal, .bunker{
     height: 40em;
     width: 36em;
     border-radius: 20px;
@@ -64,7 +64,7 @@
     opacity: 0;
 }
 
-.fort.-active{
+.fort.-active, .zal.-active, .bunker.-active{
   transform: translateX(0px);
   opacity: 1;
 }
