burger_menu visible, search delete

--- a/history_Rivne/css/media.css
+++ b/history_Rivne/css/media.css
@@ -69,3 +69,12 @@
     	margin-top: -1.2em;
 	}
 }
+
+@media screen and (min-width:  300px) and (max-width:  500px){
+	.burger-menu{
+		visibility: visible;
+	}
+	.topik_menu, .active-page{
+		visibility: hidden;
+	}
+}
