--- a/tourist_Rivne/css/media.css
+++ b/tourist_Rivne/css/media.css
@@ -82,3 +82,12 @@
 }
 
 }
+
+@media screen and (min-width:  300px) and (max-width:  500px){
+	.burger-menu{
+		visibility: visible;
+	}
+	.topik_menu, .active-page{
+		visibility: hidden;
+	}
+}
