--- a/history_Rivne/css/style.css
+++ b/history_Rivne/css/style.css
@@ -25,52 +25,9 @@ nav{
     flex-direction: row;
     align-items: center;
 }
-.searchBox{
+.topik_menu, .active-page{
     position: relative;
-    width: 65px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: stretch;
-    flex-direction: row;
-    right: 5%;
-    transition: 0.5s;
-}
-.searchBox:hover{
-    width: 400px;
-}
-.searchBox input{
-    background: #ffd84a;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border: none;
-    padding: 5px 30px;
-    outline: none;
-    font-size: 1.1em;
-    color: #404040;   
-}
-
-.searchBox input::placeholder,
-.searchBox input{
-    color: transparent;
-}
-.searchBox:hover input::placeholder,
-.searchBox:hover input{
-    color: #404040;
-}
-
-ion-icon{
-    position: absolute;
-    right: 20px;
-    color: #404040;
-    font-size: 1.5em;
-    cursor: pointer;
-}
-
-.topik_menu{
-    position: relative;
+    top:  1.2em;
     padding-right: 2em;
     font-size: 1.2em;
     font-family: 'El Messiri', sans-serif;
