--- a/history_Rivne/css/burger.css
+++ b/history_Rivne/css/burger.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700');
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@500;600&family=Playfair+Display:ital,wght@0,400;0,500;0,900;1,500&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -13,7 +13,7 @@
     top: 10px;
     right: 10px;
     z-index: 30;
-    width: 15%;
+    width: 80px;
     height: 80px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.5);
@@ -82,7 +82,8 @@
     display: flex;
     flex-flow: column;
     height: 100%;
-    background-color: #ffaa00;
+    background-image: linear-gradient(45deg, #0FFFFa, #ffa000);
+    /* background-image: url('img/photo_2022-05-03_17-56-55.jpg'), inherit; */
     overflow-y: auto;
     right: -100%;
     -webkit-transition: 0.8s;
@@ -100,9 +101,9 @@
 }
 
 .burger-menu_link {
-    padding: 14px 15px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 12px;
+    padding: 14px 20px;
+    font-family: 'El Messiri', sans-serif;
+    font-size: 13px;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 2.28px;
