--- a/history_Rivne/css/media.css
+++ b/history_Rivne/css/media.css
@@ -1,80 +1,77 @@
-@media screen and (min-width:  1366px) and (max-width:  1919px){
-		.logoLink{
-    	position:relative;
-    	top: 0.65em;
-    	left: 0.65em;
-    	width: 8em;
-    	height: 3em;
-	}
-	nav{
-		top: 12%;
-	}
-
-	.topik_menu, .active-page{
-    	font-size: 0.9em;
-	}
-	header {
-    	height: 4.7em;
-	}
-	.searchBox{
-    	width: 42.5px;
-    	height: 30px;
-    	right: 9%;
-	}
-	ion-icon{
-		right: 20%;
-	}
-	.searchBox input{
-		padding: 5px 20px;
-	}
-	.searchBox:hover{
-    	width: 300px;
-	}
-	footer {
-    	height: 6em;
-	}
-	.logo_white {
-    	width: 8em;
-    	height: 3em;
-    	margin-top: -0.65em;
-    	margin-left: -2em;
+@media screen and (min-width : 1366px) and (max-width : 1919px) {
+    .logoLink {
+        position: relative;
+        top: 0.65em;
+        left: 0.65em;
+        width: 8em;
+        height: 3em;
     }
-
-	.sponsor_img {
-		margin-top: -1.3em;
-    	width: 3.7em;
-    	height: 3.7em;
+    nav {
+        top: 12%;
     }
-
+    .topik_menu,
+    .active-page {
+        font-size: 0.9em;
+    }
+    header {
+        height: 4.7em;
+    }
+    .searchBox {
+        width: 42.5px;
+        height: 30px;
+        right: 9%;
+    }
+    ion-icon {
+        right: 20%;
+    }
+    .searchBox input {
+        padding: 5px 20px;
+    }
+    .searchBox:hover {
+        width: 300px;
+    }
+    footer {
+        height: 6em;
+    }
+    .logo_white {
+        width: 8em;
+        height: 3em;
+        margin-top: -0.65em;
+        margin-left: -2em;
+    }
+    .sponsor_img {
+        margin-top: -1.3em;
+        width: 3.7em;
+        height: 3.7em;
+    }
     .sibir_menu,
-	.sponsor,
-	.developers {
-    	font-size: 0.7em;
-    	color: rgb(255, 255, 255);
+    .sponsor,
+    .developers {
+        font-size: 0.7em;
+        color: rgb(255, 255, 255);
     }
-    .adv{
-    	margin-right: 5em;
+    .adv {
+        margin-right: 5em;
     }
-    .sponsor{
-    	margin-top: 1.1em;
+    .sponsor {
+        margin-top: 1.1em;
     }
-    
     .sibir {
-    	margin-left: -5em;
-    	margin-top: -1.2em;
-	}
-	
-	.about_us {
-		margin-left: -5em;
-    	margin-top: -1.2em;
-	}
+        margin-left: -5em;
+        margin-top: -1.2em;
+    }
+    .about_us {
+        margin-left: -5em;
+        margin-top: -1.2em;
+    }
 }
 
-@media screen and (min-width:  300px) and (max-width:  500px){
-	.burger-menu{
-		visibility: visible;
-	}
-	.topik_menu, .active-page{
-		visibility: hidden;
-	}
+@media screen and (min-width : 300px) and (max-width : 950px) {
+    .burger-menu {
+        visibility: visible;
+    }
+    .topik_menu,
+    .active-page {
+        visibility: hidden;
+    }
 }
