--- a/history_Rivne/css/style.css
+++ b/history_Rivne/css/style.css
@@ -41,15 +41,45 @@ nav{
     height: 4em;
 }
 
+/* start of information */
+.info-block{
+    display: flex;
+    width: 70%;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.img_first_war{
+    width: 20em;
+    height: 20em;
+    margin-top: 10em;
+    border-radius: 10%;
+}
+.first_period{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+}
+
+.info{
+    font-size: 1.5em;
+    margin-left: 2em;
+    color: white;
+    width: 50%;
+}
+
 main {
     width: 100%;
     min-height: 1080px;
     margin: 0 auto;
-    /*background-image: url("https://i.imgur.com/KYd3Ezu.png");*/
+    background-image: url("https://i.imgur.com/KYd3Ezu.png");
+    background-size: cover;
     background-repeat: no-repeat;
-}
+    background-attachment: fixed;
+    }
 .line{
-    position: relative;
+    position: absolute;
     min-height: 1080px;
     width: 2.5em;
     background: #FFC700;
@@ -71,7 +101,7 @@ main {
     font-family: 'Raleway', sans-serif;
     font-size: 2.5em;
     text-align: center;
-    top: 0.9em;
+    top: 0.8em;
     
 }
 footer {
