--- a/history_Rivne/css/media.css
+++ b/history_Rivne/css/media.css
@@ -64,6 +64,15 @@
         margin-left: -5em;
         margin-top: -1.2em;
     }
+    .circle_years{
+        width: 6em;
+        height: 6em;
+        left: 75%;
+    }
+    .year{
+        font-size: 1.5em;
+        top: 0.8em;
+    }
 }
 
 @media screen and (min-width : 300px) and (max-width : 950px) {
