--- a/nowadays_Rivne/css/style.css
+++ b/nowadays_Rivne/css/style.css
@@ -1,7 +1,5 @@
-
 header {
     display: flex;
-
     width: 100%;
     height: 6.6em;
     background-color: #FFC700;
@@ -18,7 +16,8 @@ header {
     display: inline-flex;
     flex-direction: row;
 }
-nav{
+
+nav {
     position: relative;
     top: 20%;
     right: 5%;
@@ -27,7 +26,9 @@ nav{
     flex-direction: row;
     align-items: center;
 }
-.topik_menu, .active-page {
+
+.topik_menu,
+.active-page {
     position: relative;
     top: 1.2em;
     padding-right: 2em;
@@ -35,8 +36,8 @@ nav{
     font-family: 'El Messiri', sans-serif;
 }
 
-.logoLink{
-    position:relative;
+.logoLink {
+    position: relative;
     top: 1em;
     left: 1em;
     position: relative;
@@ -48,12 +49,12 @@ main {
     width: 100%;
     min-height: 1080px;
     margin: 0 auto;
-    /*background-image: url("https://i.imgur.com/KYd3Ezu.png");*/
+    background-image: url("https://imgur.com/a/X3CzozM");
     background-repeat: no-repeat;
 }
 
 .container {
-    height:67.5 em;
+    height: 67.5 em;
     width: 100%;
 }
 
@@ -117,22 +118,24 @@ footer div {
     position: relative;
     right: 3em;
 }
+
 .topik_menu a:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  width: 0;
-  height: 100%;
-  border-bottom: 2px solid #404040; 
-  transition: all 0.5s;
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 0;
+    height: 100%;
+    border-bottom: 2px solid #404040;
+    transition: all 0.5s;
 }
 
 .topik_menu a:hover:before {
-  width: 70%;
+    width: 70%;
 }
-.active-page{
+
+.active-page {
     font-family: 'El Messiri', sans-serif;
     position: relative;
     padding-right: 2em;
-    font-size: 1.2em;  
+    font-size: 1.2em;
 }
