--- a/history_Rivne/css/style.css
+++ b/history_Rivne/css/style.css
@@ -44,7 +44,7 @@ nav{
 /* start of information */
 .info-block{
     display: flex;
-    width: 70%;
+    width: 100%;
     margin: 0 auto;
     justify-content: center;
 }
@@ -53,25 +53,30 @@ nav{
     width: 100%;
     flex-direction: row;
     align-items: center;
-    margin-right: 20em;
+
+    margin-right: 35em;
 }
 
 .info{
     font-family: 'Montserrat', bold;
     text-align: center;
     font-size: 1.5em;
+    margin-top: 7em;
     margin-left: 2em;
     color: white;
     width: 50%;
 }
 
 .swiper {
-    margin-top: 10em;
+    filter: drop-shadow(10px 10px 25px black);
+    margin-top: 7em;
+    border-radius: 10%;
     width: 20em;
     height: 20em;
   }
 
   .swiper-slide {
+
     border-radius: 10%;
     text-align: center;
     font-size: 18px;
@@ -94,6 +99,8 @@ nav{
 
   .swiper-slide img {
     display: block;
+    filter: drop-shadow(50px 50px black);
+    border-radius: 10%;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -206,4 +213,11 @@ footer div {
 
 .topik_menu a:hover:before {
   width: 70%;
+}
+
+.swiper-button-next, .swiper-button-prev{
+    color: inherit;
+}
+.swiper-button-next, .swiper-button-prev{
+    color: yellow;
 }
