update for history, footer

--- a/history_Rivne/css/media.css
+++ b/history_Rivne/css/media.css
@@ -53,8 +53,8 @@
     .adv {
         margin-right: 5em;
     }
-    .sponsor {
-        margin-top: 1.1em;
+    .sponsor{
+        margin-bottom: 2em;
     }
     .sibir {
         margin-left: -5em;
