--- a/nowadays_Rivne/css/style.css
+++ b/nowadays_Rivne/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 header {
     display: flex;
     width: 100%;
@@ -49,8 +50,21 @@ main {
     width: 100%;
     min-height: 1080px;
     margin: 0 auto;
-    background-image: url("https://imgur.com/a/X3CzozM");
+    /* background-image: url("https://imgur.com/RCzpnnQ.png"); */
+    background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.text{
+    width: 50%;
+    margin: 0 auto;
+    background-color: #000;
+    border-radius: 2.5em;
+    border: 10px solid #404040;
+    color: #FFF;
+    font-family: 'Lora', serif;
+    font-size: x-large;
+    text-align: justify;
 }
 
 .container {
