--- a/nowadays_Rivne/css/media.css
+++ b/nowadays_Rivne/css/media.css
@@ -63,18 +63,18 @@
     	margin-left: -5em;
     	margin-top: -1.2em;
 	}
-	
 	.about_us {
 		margin-left: -5em;
     	margin-top: -1.2em;
 	}
 }
 
-@media screen and (min-width:  300px) and (max-width:  500px){
-	.burger-menu{
-		visibility: visible;
-	}
-	.topik_menu, .active-page{
-		visibility: hidden;
-	}
+@media screen and (min-width : 300px) and (max-width : 950px) {
+    .burger-menu {
+        visibility: visible;
+    }
+    .topik_menu,
+    .active-page {
+        visibility: hidden;
+    }
 }
