--- a/nowadays_Rivne/css/burger.css
+++ b/nowadays_Rivne/css/burger.css
@@ -1,126 +1,136 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700');
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@500;600&family=Playfair+Display:ital,wght@0,400;0,500;0,900;1,500&display=swap');
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
-.burger-menu{
-  visibility: hidden;
-}
-.burger-menu_button {
 
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  z-index: 30;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.5);
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  -o-transition: 0.4s;
-  transition: 0.4s;
+.burger-menu {
+    visibility: hidden;
 }
+
+.burger-menu_button {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 30;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.5);
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+}
+
 .burger-menu_button:hover .burger-menu_lines {
-  filter: brightness(0.7);
+    filter: brightness(0.7);
 }
 
 .burger-menu_button:hover {
-  background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 .burger-menu_lines::before,
 .burger-menu_lines::after,
 .burger-menu_lines {
-  position: absolute;
-  width: 50px;
-  height: 2px;
-  background-color: #171717;
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  -o-transition: 0.4s;
-  transition: 0.4s;
-}
-.burger-menu_lines {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.burger-menu_lines::before {
-  content: '';
-  top: -12px;
-}
-.burger-menu_lines::after {
-  content: '';
-  top: 12px;
+    position: absolute;
+    width: 50px;
+    height: 2px;
+    background-color: #171717;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
 }
 
+.burger-menu_lines {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.burger-menu_lines::before {
+    content: '';
+    top: -12px;
+}
+
+.burger-menu_lines::after {
+    content: '';
+    top: 12px;
+}
 
 .burger-menu_active .burger-menu_lines {
-  background-color: transparent;
+    background-color: transparent;
 }
+
 .burger-menu_active .burger-menu_lines::before {
-  top: 0;
-  transform: rotate(45deg);
+    top: 0;
+    transform: rotate(45deg);
 }
-.burger-menu_active .burger-menu_lines::after{
-  top: 0;
-  transform: rotate(-45deg);
+
+.burger-menu_active .burger-menu_lines::after {
+    top: 0;
+    transform: rotate(-45deg);
 }
 
 .burger-menu_nav {
-  padding-top: 120px;
-  position: fixed;
-  top: 0;
-  z-index: 20;
-  display: flex;
-  flex-flow: column;
-  height: 100%;
-  background-color: #ffaa00;
-  overflow-y: auto;
-  right: -100%;
-  -webkit-transition: 0.8s;
-  -moz-transition: 0.8s;
-  -o-transition: 0.8s;
-  transition: 0.8s;
+    padding-top: 120px;
+    position: fixed;
+    top: 0;
+    z-index: 20;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    background-image: linear-gradient(45deg, #0FFFFa, #ffa000);
+    /* background-image: url('img/photo_2022-05-03_17-56-55.jpg'), inherit; */
+    overflow-y: auto;
+    right: -100%;
+    -webkit-transition: 0.8s;
+    -moz-transition: 0.8s;
+    -o-transition: 0.8s;
+    transition: 0.8s;
 }
+
 .burger-menu_active .burger-menu_nav {
-  right: 0;
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  -o-transition: 0.4s;
-  transition: 0.4s;
+    right: 0;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
 }
+
 .burger-menu_link {
-  padding: 18px 35px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  font-weight: 400;
-  color: #171717;
-  border-bottom: 1px solid #fff;
+    padding: 14px 20px;
+    font-family: 'El Messiri', sans-serif;
+    font-size: 13px;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 2.28px;
+    font-weight: 900;
+    color: #171717;
+    /* border-bottom: 100px solid rgb(0, 64, 255); */
 }
+
 .burger-menu_link:first-child {
-  border-top: 1px solid #fff;
+    /* border-top: 50px solid rgb(0, 64, 255); */
 }
+
 .burger-menu_link:hover {
-  filter: brightness(0.9);
+    filter: brightness(0.9);
 }
+
 .burger-menu_overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 10;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 10;
 }
+
 .burger-menu_active .burger-menu_overlay {
-  display: block;
-  background-color: rgba(0, 0, 0, 0.5);
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5);
 }
-
-
-
