--- a/nowadays_Rivne/css/style.css
+++ b/nowadays_Rivne/css/style.css
@@ -66,7 +66,10 @@ main {
     font-size: x-large;
     text-align: justify;
 }
-
+.info  {
+    width: 90%;
+    margin: 0 auto;
+}
 .container {
     height: 67.5 em;
     width: 100%;
