--- a/info_us/css/style.css
+++ b/info_us/css/style.css
@@ -1,99 +1,212 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700');
-*{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,700");
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
+* {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
 }
-body{
-    background: linear-gradient(108deg, #343131 -2%, #1D1919 102%);
+body {
+  background: linear-gradient(108deg, #343131 -2%, #1d1919 102%);
 }
-body,html{
-    height: 100vh;
+body,
+html {
+  height: 100vh;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 110px 1fr;
+  grid-template-rows: 100px 1fr;
+  height: 100%;
+  /* gap: 60px; */
+}
+
+.content_sidebar {
+  border-right: 1px solid #505050;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+.content_sidebar__button {
+  display: block;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(127deg, #505050 0%, #383838 10%);
+  border: none;
+  position: relative;
+}
+.content_sidebar__button::after {
+  content: "";
+  display: block;
+  height: 48px;
+  width: 48px;
+  background-image: url(../css/images/lol.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: absolute;
+  top: calc(50% - 24px);
+  left: calc(50% - 24px);
+}
+
+.content-header {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  padding-left: 60px;
+}
+.content-header__logo {
+  display: block;
+  background-image: url(../css/images/logo_white.svg);
+  width: calc(297px / 1.5);
+  height: calc(114px / 1.5);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+nav {
+  display: flex;
+  align-items: center;
+}
+.content-header__list {
+  display: flex;
+  align-items: center;
+}
+.content-header__item {
+  margin-left: 67px;
+}
+.content-header__item:first-child {
+  margin-left: 0;
+}
+.content-header__item:last-child {
+  margin-right: 60px;
+}
+.content-header__link {
+  color: rgb(221, 221, 221);
+  font-size: 17px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
+.content-header__link::after {
+  content: "";
+  width: 22px;
+  height: 2px;
+  background-color: #fff;
+  display: block;
+  position: relative;
+  bottom: -14px;
+  opacity: 0;
+  transition: 0.2s;
+}
+.content-header__link:hover::after {
+  opacity: 1;
+  transition: 0.25s;
+}
+
+.content-main {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+.swiper {
+  height: calc(100vh - 100px);
+  color: #fff;
+
+  position: relative;
+  display: flex;
+}
+.swiper-wrapper {
+  flex-basis: 100%;
+  position: inherit;
 }
 
 
-.content{
-    display: grid;
-    grid-template-columns: 110px 1fr;
-    grid-template-rows: 100px 1fr;
-    height: 100%;
-    gap: 60px;
+.swiper-pagination-vertical.swiper-pagination-bullets,
+.swiper-vertical > .swiper-pagination-bullets {
+  right: inherit;
+  position: absolute;
+  left: 60px;
+  width: 200px;
+  flex-basis: 200px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 20px;
 }
-
-.content_sidebar{
-    border-right: 1px solid #505050;
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;    
+.swiper-pagination-bullet-active {
+  background: transparent;
 }
-.content_sidebar__button{
-    display: block;
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(127deg, #505050 0%, #383838 10%);
-    border: none;
-    position: relative;
-}
-.content_sidebar__button::after{
-    content: '';
-    display: block;
-    height: 48px;
-    width: 48px;
-    background-image: url(../css/images/lol.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    position: absolute;
-    top: calc(50% - 24px);
-    left: calc(50% - 24px);
-}
-
-
-
-.content-header{
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    display: flex;
-    justify-content: space-between;
-    align-self: center;
-}
-.content-header__logo{
-    display: block;
-    background-image: url(../css/images/logo_white.svg);
-    width: calc(297px/1.5);
-    height:calc(114px/1.5);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-nav{
-    display: flex;
-    align-items: center;
-}
-.content-header__list{
-    display: flex;
-    align-items: center;
-}
-.content-header__item{
-    margin-left: 67px;
+.swiper-pagination-bullet {
+  background: transparent;
+  width: inherit;
+  height: inherit;
+  text-align: left;
+  font-size: 25px;
+  font-weight: 400;
 
 }
-.content-header__item:first-child{
-    margin-left: 0;
+.swiper-pagination-bullet span {
+  display: block;
 }
-.content-header__item:last-child{
-    margin-right: 60px;
+.swiper-pagination-bullet span:nth-child(1){
+  font-size: 20px;
+  font-weight: 300;
 }
-.content-header__link{
-    color: rgb(221, 221, 221);
-    font-size: 17px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+.swiper-pagination-bullet span:nth-child(2){
+  font-size: 20px;
+  font-weight: 300;
 }
 
+.swiper-body-text{
+  position: absolute;
+  top: 150px;
+  left: 1100px;
+  display: block;
+  width: 600px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 50px;
+}
 
+.swiper-body img{
+  left: 257px;
+  width: 65%;
+   position: relative;
+}
 
-
-.content-main{
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+.swiper-footer{
+  position: absolute;
+  background: linear-gradient(270deg, rgba(66,66,66,0.49) 0%, rgba(66,66,66,0.48) 76%, rgba(66,66,66,0) 100%);
+  backdrop-filter: blur(47px);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  font-family: 'Oswald', sans-serif;
+  align-items: center;
+  height: 100px;
+}
+.swiper-info{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto 1fr;
+  gap: 20px;
+}
+.swiper-info__author{
+  margin-left: 20px;
+  font-size: 20px;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+.swiper-info__item {
+  width: 150px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.swiper-info__item span{
+  /* display: block; */
+  /* width: 50px; */
+  /* height: 50px; */
+}
+.swiper-info__item img{
+  width: 25px;
+  height: 25px;
 }
