fix burger script

--- a/history_Rivne/css/burger.css
+++ b/history_Rivne/css/burger.css
@@ -103,7 +103,7 @@
 .burger-menu_link {
     padding: 14px 20px;
     font-family: 'El Messiri', sans-serif;
-    font-size: 13px;
+    font-size: 17em;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 2.28px;
