--- a/nowadays_Rivne/css/style.css
+++ b/nowadays_Rivne/css/style.css
@@ -23,7 +23,7 @@ nav {
     top: 20%;
     right: 5%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex;
     flex-direction: row;
     align-items: center;
 }
