--- a/tourist_Rivne/css/style.css
+++ b/tourist_Rivne/css/style.css
@@ -31,7 +31,7 @@ nav{
     top: 20%;
     right: 5%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex;
     flex-direction: row;
     align-items: center;
 }
