--- a/history_Rivne/css/style.css
+++ b/history_Rivne/css/style.css
@@ -63,6 +63,7 @@ nav{
 .info{
     font-family: 'Lora';
     text-align: justify;
+    text-indent: 40px;
     font-size: 1.5em;
     line-height: 1.5em;
     color: white;
