Nowadays-new-style

--- a/info_us/css/style.css
+++ b/info_us/css/style.css
@@ -17,7 +17,7 @@ html {
 
 .content {
   display: grid;
-  grid-template-columns: 110px 1fr;
+  grid-template-columns: 110px 1fr repeat();
   grid-template-rows: 100px 1fr;
   height: 100%;
   /* gap: 60px; */
