--- a/nowadays_Rivne/css/sashko_new_style.css
+++ b/nowadays_Rivne/css/sashko_new_style.css
@@ -48,39 +48,40 @@ nav {
 
 main {
     width: 100%;
+    background-image: url("img/background_nowadays.png");
     min-height: 1080px;
     margin: 0 auto;
-    background-image: url("img/background_nowadays.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-}
 
-.photo_container{
-    align-content: space-between;
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
-    width: 80%;
-    height: 100%;
-    left: 30%;
+}
+.old_photo, .new_photo{
+    min-width: 20em;
+    min-height: 10em;
+    border: 10px solid #ffc800;
+    align-self: center;
+    justify-self: center;
+} 
+.kraizn, .lebedinka, .gidrik,
+.kinopalaz, .teatr, .most, .kostel{
+    width: 90%;
+    margin-left: auto;
     align-items: center;
+    margin: 0 auto;
+    display: grid;
+    padding: 1em;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2em;
+    min-width: 20em;
+    min-height: 10em;
 }
-.new_photo{
-    margin-right: 40em;
-    border: 0.2em solid #FFC700;
-    max-width: 800px;
-    max-height: 500px;
-}
-.text{
+.text, .properties{
     text-indent: 5%;
+    padding: 1em;
     width: 75%;
     margin: 0 auto;
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.699);
     border-radius: 1em;
     border: 10px solid #404040;
     color: #FFF;
@@ -91,10 +92,38 @@ main {
 .info  {
     width: 90%;
     margin: 0 auto;
+    text-indent: 5%;
 }
-.container {
-    height: 67.5 em;
-    width: 100%;
+.container-text{
+    padding-top: 40%;
+}
+.others{
+    padding-top: 5%;
+    background-color: rgba(0, 0, 0, 0.699);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 90%;
+    grid-gap: 3em;
+    margin: 0 auto;
+    padding-bottom: 5%;
+    
+}
+.left-topic{
+    background-color: rgba(0, 0, 0, 0.699);
+    text-align: center;
+    color: #FFF;
+    width: 90%;
+    margin: 0 auto;
+    
+}
+h1{
+    font-size: 3.4em;
+    color: #FFFFFF;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.616);
+    /* padding-top: 5%; */
+    width: 30%;
+    margin: 0 auto;
 }
 
 footer {
