--- a/info_us/css/style.css
+++ b/info_us/css/style.css
@@ -41,7 +41,7 @@ html {
   display: block;
   height: 48px;
   width: 48px;
-  background-image: url(../css/images/lol.jpg);
+  background-image: url();
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
